test/tests/stages/15_arrays_and_pointer_arithmetic/valid/casts/implicit_and_explicit_conversions.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[7]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: arr
                  CCompoundInit: 
                    List[4]: 
                      CSingleInit: 
                        CUnary: 
                          CNegate: 
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                          None: 
                        None: 
                      CSingleInit: 
                        CUnary: 
                          CNegate: 
                          CConstant: 
                            CConstInt: 
                              TInt: 2
                            None: 
                          None: 
                        None: 
                      CSingleInit: 
                        CUnary: 
                          CNegate: 
                          CConstant: 
                            CConstInt: 
                              TInt: 3
                            None: 
                          None: 
                        None: 
                      CSingleInit: 
                        CUnary: 
                          CNegate: 
                          CConstant: 
                            CConstInt: 
                              TInt: 4
                            None: 
                          None: 
                        None: 
                    None: 
                  Array: 
                    TLong: 4
                    Long: 
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CVar: 
                    TIdentifier: arr
                    None: 
                  CCast: 
                    CVar: 
                      TIdentifier: arr
                      None: 
                    Pointer: 
                      Long: 
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CCast: 
                    CVar: 
                      TIdentifier: arr
                      None: 
                    Pointer: 
                      Array: 
                        TLong: 4
                        Long: 
                    None: 
                  CAddrOf: 
                    CVar: 
                      TIdentifier: arr
                      None: 
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 2
                            None: 
                None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: unsigned_arr
                  CSingleInit: 
                    CCast: 
                      CVar: 
                        TIdentifier: arr
                        None: 
                      Pointer: 
                        ULong: 
                      None: 
                    None: 
                  Pointer: 
                    ULong: 
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CSubscript: 
                    CVar: 
                      TIdentifier: unsigned_arr
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  CConstant: 
                    CConstULong: 
                      TULong: 18446744073709551615
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 3
                            None: 
                None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CSubscript: 
                    CVar: 
                      TIdentifier: unsigned_arr
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 3
                      None: 
                    None: 
                  CConstant: 
                    CConstULong: 
                      TULong: 18446744073709551612
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 4
                            None: 
                None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
